# jarvis

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  config.example.toml  pyproject.toml  requirements.txt  run.ps1  setup.ps1
jarvis/: __init__.py  __main__.py  agent.py  audio.py  chime.py  config.py  llm.py  logconf.py  prompts.py  stt.py  tts.py  wakeword.py
jarvis/tools/: __init__.py  calculator.py  clipboard.py  clock.py  reminders.py  system.py  web.py
tests/: test_agent.py  test_calculator.py  test_clock.py  test_config.py  test_llm.py  test_reminders.py  test_stt.py  test_system.py  test_tools.py  test_wakeword.py  test_web.py
